@@ -1,4 +1,4 @@
-/*	$NetBSD: cgi-bozo.c,v 1.32 2015/12/31 04:39:16 mrg Exp $	*/
+/*	$NetBSD: cgi-bozo.c,v 1.33 2016/04/15 17:57:21 mrg Exp $	*/
 
 /*	$eterna: cgi-bozo.c,v 1.40 2011/11/18 09:21:15 mrg Exp $	*/
 
@@ -212,6 +212,136 @@ append_index_html(bozohttpd_t *httpd, char **url)
 		"append_index_html: url adjusted to `%s'", *url));
 }
 
+/* This function parse search-string according to section 4.4 of RFC3875 */
+static char **
+parse_search_string(bozo_httpreq_t *request, const char *query, size_t *args_len)
+{
+	struct	bozohttpd_t *httpd = request->hr_httpd;
+	size_t i;
+	char *s, *str, **args;
+	
+	*args_len = 0;
+
+	/* URI MUST not contain any unencoded '=' - RFC3875, section 4.4 */
+	if (strchr(query, '=')) {
+		return NULL;
+	}
+
+	str = bozostrdup(httpd, request, query);
+
+	/*
+	 * there's no more arguments than '+' chars in the query string as it's
+	 * the separator
+	 */
+	*args_len = 1;
+	/* count '+' in str */
+	for (s = str; (s = strchr(s, '+')); (*args_len)++);
+	
+	args = bozomalloc(httpd, sizeof(*args) * (*args_len + 1));
+ 
+	args[0] = str;
+	args[*args_len] = NULL;
+	for (s = str, i = 0; (s = strchr(s, '+'));) {
+		*s = '\0';
+		s++;
+		args[i++] = s;
+	}
+
+	/*
+	 * check if search-strings are valid:
+	 *
+	 * RFC3875, section 4.4:
+	 *
+	 * search-string = search-word *( "+" search-word )
+	 * search-word   = 1*schar
+	 * schar		 = unreserved | escaped | xreserved
+	 * xreserved	 = ";" | "/" | "?" | ":" | "@" | "&" | "=" | "," |
+	 *		   "$"
+	 * 
+	 * section 2.3:
+	 *
+	 * hex	      = digit | "A" | "B" | "C" | "D" | "E" | "F" | "a" |
+	 *		"b" | "c" | "d" | "e" | "f"
+	 * escaped    = "%" hex hex
+	 * unreserved = alpha | digit | mark
+	 * mark	      = "-" | "_" | "." | "!" | "~" | "*" | "'" | "(" | ")"
+	 *
+	 * section 2.2:
+	 *
+	 * alpha	= lowalpha | hialpha
+	 * lowalpha	= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" |
+	 *		  "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" |
+	 *		  "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" |
+	 *		  "y" | "z"
+	 * hialpha	= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" |
+	 *		  "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" |
+	 *		  "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" |
+	 *	          "Y" | "Z"  
+	 * digit        = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" |
+	 *		  "8" | "9"
+	 */
+#define	UNRESERVED_CHAR	"-_.!~*'()"
+#define	XRESERVED_CHAR	";/?:@&=,$"
+
+	for (i = 0; i < *args_len; i++) {
+		s = args[i];
+		/* search-word MUST have at least one schar */
+		if (*s == '\0')
+			goto parse_err;
+		while(*s) {
+			/* check if it's unreserved */
+			if (isalpha((int)*s) || isdigit((int)*s) ||
+			    strchr(UNRESERVED_CHAR, *s)) {
+				s++;
+				continue;
+			}
+
+			/* check if it's escaped */
+			if (*s == '%') {
+				if (s[1] == '\0' || s[2] == '\0')
+					goto parse_err;
+				if (!isxdigit((int)s[1]) ||
+				    !isxdigit((int)s[2]))
+					goto parse_err;
+				s += 3;
+				continue;
+			}
+
+			/* check if it's xreserved */
+
+			if (strchr(XRESERVED_CHAR, *s)) {
+				s++;
+				continue;
+			}
+
+			goto parse_err;
+		}
+	}
+
+	/* decode percent encoding */
+	for (i = 0; i < *args_len; i++) {
+		if (bozo_decode_url_percent(request, args[i]))
+			goto parse_err;
+	}
+
+	/* allocate each arg separately */
+	for (i = 0; i < *args_len; i++)
+		args[i] = bozostrdup(httpd, request, args[i]);
+	free(str);
+
+	return args;
+
+parse_err:
+
+	free (*args);
+	free (str);
+	*args = NULL;
+	*args_len = 0;
+
+	return 0;
+
+}
+
 void
 bozo_cgi_setbin(bozohttpd_t *httpd, const char *path)
 {
@@ -249,9 +379,9 @@ bozo_process_cgi(bozo_httpreq_t *request)
 	bozoheaders_t *headp;
 	const char *type, *clen, *info, *cgihandler;
 	char	*query, *s, *t, *path, *env, *command, *file, *url;
-	char	**envp, **curenvp, *argv[4];
+	char	**envp, **curenvp, **argv, **search_string_argv = NULL;
 	char	*uri;
-	size_t	len;
+	size_t	i, len, search_string_argc = 0;
 	ssize_t rbytes;
 	pid_t	pid;
 	int	envpsize, ix, nph;
@@ -312,12 +442,25 @@ bozo_process_cgi(bozo_httpreq_t *request)
 	} else if (len - 1 == CGIBIN_PREFIX_LEN)	/* url is "/cgi-bin/" */
 		append_index_html(httpd, &file);
 
+	/* RFC3875  sect. 4.4. - search-string support */
+	if (query != NULL) {
+		search_string_argv = parse_search_string(request, query,
+		    &search_string_argc);
+	}
+
+	debug((httpd, DEBUG_NORMAL, "parse_search_string args no: %lu",
+	    search_string_argc));
+	for (i = 0; i < search_string_argc; i++) {
+		debug((httpd, DEBUG_FAT,
+		    "search_string[%lu]: `%s'", i, search_string_argv[i]));
+	}
+
+	argv = bozomalloc(httpd, sizeof(*argv) * (3 + search_string_argc));
+
 	ix = 0;
 	if (cgihandler) {
 		command = file + 1;
 		path = bozostrdup(httpd, request, cgihandler);
-		argv[ix++] = path;
-			/* argv[] = [ path, command, query, NULL ] */
 	} else {
 		command = file + CGIBIN_PREFIX_LEN + 1;
 		if ((s = strchr(command, '/')) != NULL) {
@@ -329,12 +472,15 @@ bozo_process_cgi(bozo_httpreq_t *request)
 		strcpy(path, httpd->cgibin);
 		strcat(path, "/");
 		strcat(path, command);
-			/* argv[] = [ command, query, NULL ] */
 	}
-	argv[ix++] = command;
-	argv[ix++] = query;
-	argv[ix++] = NULL;
 
+	argv[ix++] = path;
+
+	/* copy search-string args */
+	for (i = 0; i < search_string_argc; i++)
+		argv[ix++] = search_string_argv[i];
+
+	argv[ix++] = NULL;
 	nph = strncmp(command, "nph-", 4) == 0;
 
 	type = request->hr_content_type;
@@ -400,8 +546,11 @@ bozo_process_cgi(bozo_httpreq_t *request)
 	bozo_setenv(httpd, "REQUEST_URI", uri, curenvp++);
 	bozo_setenv(httpd, "DATE_GMT", bozo_http_date(date, sizeof(date)),
 			curenvp++);
+	/* RFC3875 section 4.1.7 says that QUERY_STRING MUST be defined. */ 
 	if (query && *query)
 		bozo_setenv(httpd, "QUERY_STRING", query, curenvp++);
+	else
+		bozo_setenv(httpd, "QUERY_STRING", "", curenvp++);
 	if (info && *info)
 		bozo_setenv(httpd, "PATH_INFO", info, curenvp++);
 	if (type && *type)
@@ -425,8 +574,13 @@ bozo_process_cgi(bozo_httpreq_t *request)
 		bozo_setenv(httpd, "REDIRECT_STATUS", "200", curenvp++);
 	bozo_auth_cgi_setenv(request, &curenvp);
 
-	debug((httpd, DEBUG_FAT, "bozo_process_cgi: going exec %s, %s %s %s",
-	    path, argv[0], strornull(argv[1]), strornull(argv[2])));
+	debug((httpd, DEBUG_FAT, "bozo_process_cgi: going exec %s with args:",
+	    path));
+
+	for (i = 0; argv[i] != NULL; i++) {
+		debug((httpd, DEBUG_FAT, "bozo_process_cgi: argv[%lu] = `%s'",
+		    i, argv[i]));
+	}
 
 	if (socketpair(AF_UNIX, SOCK_STREAM, PF_UNSPEC, sv) == -1)
 		bozoerr(httpd, 1, "child socketpair failed: %s",
@@ -461,6 +615,9 @@ bozo_process_cgi(bozo_httpreq_t *request)
 	free(query);
 	free(file);
 	free(url);
+	for (i = 0; i < search_string_argc; i++)
+		free(search_string_argv[i]);
+	free(search_string_argv);
 
 	close(sv[1]);
 
@@ -500,6 +657,10 @@ bozo_process_cgi(bozo_httpreq_t *request)
 	exit(0);
 
  out:
+
+	for (i = 0; i < search_string_argc; i++)
+		free(search_string_argv[i]);
+	free(search_string_argv);
 	free(query);
 	free(file);
 	free(url);
